Fixed error in google ads that was causing the text of the javascript to be displayed instead of executing the javascript.

--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
 # DO NOT EDIT - Auto-generated from app_generic.yaml
 
-application: romancesapp
+application: friendbazaar
 version: 2012-10-10-1752
 runtime: python
 api_version: 1
@@ -10,8 +10,8 @@ default_expiration: "30d"
 
 handlers:
 - url: /favicon.ico
-  static_files: rs/static/auto-generated-2012-10-10-1752/img/Discrete/favicon.ico
-  upload: rs/static/auto-generated-2012-10-10-1752/img/Discrete/favicon.ico
+  static_files: rs/static/auto-generated-2012-10-10-1752/img/Friend/favicon.ico
+  upload: rs/static/auto-generated-2012-10-10-1752/img/Friend/favicon.ico
 
 
 # The static directory will contain CSS, JS, Images, etc. We re-map the directory location
