--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,7 @@
 # DO NOT EDIT - Auto-generated from app_generic.yaml
 
-application: romancesapp
-version: 2012-10-22-2120
+application: gaysetup
+version: 2012-11-07-0115
 runtime: python
 api_version: 1
 
@@ -10,23 +10,23 @@ default_expiration: "30d"
 
 handlers:
 - url: /favicon.ico
-  static_files: rs/static/auto-generated-2012-10-22-2120/img/Discrete/favicon.ico
-  upload: rs/static/auto-generated-2012-10-22-2120/img/Discrete/favicon.ico
+  static_files: rs/static/auto-generated-2012-11-07-0115/img/Gay/favicon.ico
+  upload: rs/static/auto-generated-2012-11-07-0115/img/Gay/favicon.ico
 
 
 # The static directory will contain CSS, JS, Images, etc. We re-map the directory location
 # for each new build name to ensure that out-of-date static files will not be accessed through
 # cached data (since the directory name changes, old caches will not be hit)
 
-- url: /rs/static/auto-generated-2012-10-22-2120
-  static_dir: rs/static/auto-generated-2012-10-22-2120
+- url: /rs/static/auto-generated-2012-11-07-0115
+  static_dir: rs/static/auto-generated-2012-11-07-0115
   
-- url: /rs/static/auto-generated-2012-10-22-2120
-  static_dir: rs/static/auto-generated-2012-10-22-2120
+- url: /rs/static/auto-generated-2012-11-07-0115
+  static_dir: rs/static/auto-generated-2012-11-07-0115
   
 - url: /robots.txt
-  static_files: rs/static/auto-generated-2012-10-22-2120/robots.txt
-  upload: rs/static/auto-generated-2012-10-22-2120/robots.txt
+  static_files: rs/static/auto-generated-2012-11-07-0115/robots.txt
+  upload: rs/static/auto-generated-2012-11-07-0115/robots.txt
 
 - url: /rs/admin/.*
   script: main.py
