Wrote code to generate robots.txt, including a link to the sitemaps

--- a/app.yaml
+++ b/app.yaml
@@ -10,24 +10,20 @@ default_expiration: "30d"
 
 handlers:
 - url: /favicon.ico
-  static_files: rs/static/auto-generated-2012-11-08-0041/img/Discrete/favicon.ico
-  upload: rs/static/auto-generated-2012-11-08-0041/img/Discrete/favicon.ico
+  static_files: rs/static/img/Discrete/favicon.ico
+  upload: rs/static/img/Discrete/favicon.ico
 
 
 # The static directory will contain CSS, JS, Images, etc. We re-map the directory location
 # for each new build name to ensure that out-of-date static files will not be accessed through
 # cached data (since the directory name changes, old caches will not be hit)
 
-- url: /rs/static/auto-generated-2012-11-08-0041
-  static_dir: rs/static/auto-generated-2012-11-08-0041
+- url: /rs/static
+  static_dir: rs/static
   
-- url: /rs/static/auto-generated-2012-11-08-0041
-  static_dir: rs/static/auto-generated-2012-11-08-0041
+- url: /rs/proprietary/static
+  static_dir: rs/proprietary/static
   
-- url: /robots.txt
-  static_files: rs/static/auto-generated-2012-11-08-0041/robots.txt
-  upload: rs/static/auto-generated-2012-11-08-0041/robots.txt
-
 - url: /rs/admin/.*
   script: main.py
   login: admin
