--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,7 @@
 # DO NOT EDIT - Auto-generated from app_generic.yaml
 
 application: languageapp
-version: 2012-11-10-xxxx
+version: 2012-11-17-0235
 runtime: python
 api_version: 1
 
