--- a/Gay_index.yaml
+++ b/Gay_index.yaml
@@ -244,7 +244,13 @@ indexes:
   - name: username_combinations_list
   - name: last_login_string
     direction: desc
-
+    
+# The following is used for sitemap generation
+- kind: UserModel
+  properties:
+  - name: is_real_user
+  - name: user_is_marked_for_elimination
+  - name: creation_date
 
 - kind: UsersHaveHadContact
   properties:
