--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,7 @@
 # DO NOT EDIT - Auto-generated from app_generic.yaml
 
-application: romancesapp
-version: 2012-11-18-0821
+application: gaysetup
+version: 2012-11-19-1721
 runtime: python
 api_version: 1
 
@@ -10,19 +10,19 @@ default_expiration: "30d"
 
 handlers:
 - url: /favicon.ico
-  static_files: rs/static/auto-generated-2012-11-18-0821/img/Discrete/favicon.ico
-  upload: rs/static/auto-generated-2012-11-18-0821/img/Discrete/favicon.ico
+  static_files: rs/static/auto-generated-2012-11-19-1721/img/Gay/favicon.ico
+  upload: rs/static/auto-generated-2012-11-19-1721/img/Gay/favicon.ico
 
 
 # The static directory will contain CSS, JS, Images, etc. We re-map the directory location
 # for each new build name to ensure that out-of-date static files will not be accessed through
 # cached data (since the directory name changes, old caches will not be hit)
 
-- url: /rs/static/auto-generated-2012-11-18-0821
-  static_dir: rs/static/auto-generated-2012-11-18-0821
+- url: /rs/static/auto-generated-2012-11-19-1721
+  static_dir: rs/static/auto-generated-2012-11-19-1721
   
-- url: /rs/static/auto-generated-2012-11-18-0821
-  static_dir: rs/static/auto-generated-2012-11-18-0821
+- url: /rs/static/auto-generated-2012-11-19-1721
+  static_dir: rs/static/auto-generated-2012-11-19-1721
   
 - url: /rs/admin/.*
   script: main.py
