--- a/Discrete_index.yaml
+++ b/Discrete_index.yaml
@@ -247,9 +247,13 @@ indexes:
   - name: last_login_string
     direction: desc
 
+# The following is used for sitemap generation
+- kind: UserModel
+  properties:
+  - name: is_real_user
+  - name: user_is_marked_for_elimination
+  - name: creation_date
 
-
-# NEW - Replacement for UsersHaveHadContact
 
 - kind: UsersHaveSentMessages
   properties:
