--- a/Lesbian_index.yaml
+++ b/Lesbian_index.yaml
@@ -246,8 +246,13 @@ indexes:
     direction: desc
 
 
+# The following is used for sitemap generation
+- kind: UserModel
+  properties:
+  - name: is_real_user
+  - name: user_is_marked_for_elimination
+  - name: creation_date
 
-# NEW - Replacement for UsersHaveHadContact
 
 - kind: UsersHaveSentMessages
   properties:
