--- a/Swinger_index.yaml
+++ b/Swinger_index.yaml
@@ -238,7 +238,6 @@ indexes:
   - name: last_login_string
     direction: desc
 
-
 - kind: UserModel
   properties:
   - name: is_real_user
@@ -247,7 +246,12 @@ indexes:
   - name: last_login_string
     direction: desc
 
-# NEW - Replacement for UsersHaveHadContact
+# The following is used for sitemap generation
+- kind: UserModel
+  properties:
+  - name: is_real_user
+  - name: user_is_marked_for_elimination
+  - name: creation_date
 
 - kind: UsersHaveSentMessages
   properties:
