Modified presence code so that if an "expired session" is reported from the server, the client will stop polling. Additionally, the logout screen has had it's chatboxes removed.

--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,7 @@
 # DO NOT EDIT - Auto-generated from app_generic.yaml
 
 application: romancesapp
-version: 2012-12-14-1433
+version: 2012-12-28-xxx
 runtime: python
 api_version: 1
 
