Fixed minor issues, and uploaded (and seems to be working) to the server.
Moved code out of manage.py into an external wrapper.

Removed Crypto dependence - this code was no longer required and was causing build problems.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ rs/static/auto-generated*
 # Environment for the WingIDE environment that I use
 Wing_project.wpr
 
+# local storage
+.gaedata
+
 # Jetbrains files (another editor that I use)
 .idea
 
@@ -28,4 +31,3 @@ rs/templates/video_phone_symlink*
 rs/proprietary/
 
 
-Crypto
