--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,10 @@
 # DO NOT EDIT - Auto-generated from app_generic.yaml
 
 application: romancesapp
-version: 2012-13-02-0037
+version: 2013-01-02-2216
 runtime: python27
 api_version: 1
-threadsafe: yes
+threadsafe: no
 
 # define when static files expire
 default_expiration: "30d"
@@ -29,19 +29,19 @@ handlers:
   login: admin
 
 - url: /favicon.ico
-  static_files: rs/static/auto-generated-2012-13-02-0037/img/Discrete/favicon.ico
-  upload: rs/static/auto-generated-2012-13-02-0037/img/Discrete/favicon.ico
+  static_files: rs/static/auto-generated-2013-01-02-2216/img/Discrete/favicon.ico
+  upload: rs/static/auto-generated-2013-01-02-2216/img/Discrete/favicon.ico
 
 
 # The static directory will contain CSS, JS, Images, etc. We re-map the directory location
 # for each new build name to ensure that out-of-date static files will not be accessed through
 # cached data (since the directory name changes, old caches will not be hit)
 
-- url: /rs/static/auto-generated-2012-13-02-0037
-  static_dir: rs/static/auto-generated-2012-13-02-0037
+- url: /rs/static/auto-generated-2013-01-02-2216
+  static_dir: rs/static/auto-generated-2013-01-02-2216
   
-- url: /rs/static/auto-generated-2012-13-02-0037
-  static_dir: rs/static/auto-generated-2012-13-02-0037
+- url: /rs/static/auto-generated-2013-01-02-2216
+  static_dir: rs/static/auto-generated-2013-01-02-2216
   
 - url: /rs/admin/.*
   script: djangoappengine.main.application
