--- a/app_generic.yaml
+++ b/app_generic.yaml
@@ -2,7 +2,7 @@ application: app_name_here
 version: yyyy-mm-dd-hhhh
 runtime: python27
 api_version: 1
-threadsafe: yes
+threadsafe: no
 
 # define when static files expire
 default_expiration: "30d"
