--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,7 @@
 # DO NOT EDIT - Auto-generated from app_generic.yaml
 
 application: romancesapp
-version: 2013-01-29-1226
+version: 2013-01-29-xxxx1
 runtime: python27
 api_version: 1
 threadsafe: yes
