--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,7 @@
 # DO NOT EDIT - Auto-generated from app_generic.yaml
 
 application: romancesapp
-version: 2013-02-05-1705
+version: 2013-02-06-xxx
 runtime: python27
 api_version: 1
 threadsafe: yes
