Re-named photo_upload_rules object to be more generic "accept_terms_and_rules" .. this will be a container for future terms/conditions that we may require the user to accpt.

--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -1,5 +1,5 @@
 mapreduce:
-- name: Add PhotoUploadRules (photo_upload_rules_key) to each userobject
+- name: Add AcceptTermsAndRules object (terms_and_rules_key) to each userobject
   #params:
   #- name: done_callback
   #  value: /done
