Wrote code to backup the database into Google Cloud Storage. Current schedule is every 10 days. Note: currently there is no easy way to automatically delete old backups, and so they are organized in a structure that makes it easy to manually delete old jobs by using the Google Cloud Storage web interface.

--- a/cron.yaml
+++ b/cron.yaml
@@ -10,3 +10,9 @@ cron:
 - description: Remove old sessions
   url: /rs/admin/cleanup_sessions/
   schedule: every 8 hours
+
+- description: Backup Database
+  url: /rs/admin/backup_database/
+  schedule: every 240 hours # every 10 days
+
+  
