--- a/mapreduce.yaml
+++ b/mapreduce.yaml
@@ -1,10 +1,10 @@
 mapreduce:
-- name: Remove backup userobject (is_real_user=False) and add AcceptTermsAndRules object (terms_and_rules_key) to each userobject
+- name: Example of using mapreduce to modify userobject
   #params:
   #- name: done_callback
   #  value: /done
   mapper:
-    handler: rs.batch_jobs.remove_backup_userobjects_and_set_photo_rules_on_userobject
+    handler: rs.batch_jobs.mapreduce_update_userobject
     input_reader: mapreduce.input_readers.DatastoreInputReader
     params:
     - name: entity_kind
