Added a directory to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,7 @@ rs/templates/video_phone_symlink*
 # in to the main git codebase.
 rs/proprietary/
 
+# Ignore Regions data - don't want this backed up
+Regions
+
 
