--- a/app_generic.yaml
+++ b/app_generic.yaml
@@ -27,19 +27,20 @@ handlers:
   login: admin
 
 - url: /favicon.ico
-  static_files: rs/versioned_static/img/BUILD_NAME/favicon.ico
-  upload: rs/versioned_static/img/BUILD_NAME/favicon.ico
+  static_files: client/app/images/BUILD_NAME/favicon.ico
+  upload: client/app/images/BUILD_NAME/favicon.ico
 
 
-# The static directory will contain CSS, JS, Images, etc. We re-map the directory location
-# for each new build name to ensure that out-of-date static files will not be accessed through
-# cached data (since the directory name changes, old caches will not be hit)
+# The static directory will contain CSS, JS, Images, etc. 
 
-- url: /rs/versioned_static
-  static_dir: rs/versioned_static
+- url: /styles
+  static_dir: client/app/styles
   
-- url: /rs/proprietary/proprietary_versioned_static
-  static_dir: rs/proprietary/proprietary_versioned_static
+- url: /scripts
+  static_dir: client/app/scripts
+  
+- url: /proprietary/styles
+  static_dir: client/app/proprietary/styles
   
 - url: /rs/admin/.+
   script: djangoappengine.main.application
@@ -54,13 +55,6 @@ handlers:
   script: djangoappengine.main.application
   
   
-# due to the way that Flash calls the other assets, they appear to be in the /videochat_window/ "directory", and therefore
-# we expose these assets as static files so that the Flash can access them without having to modify the FlashBuilder-generated files
-# Note: we have two symbolic links that point to the flash files. This is necessary because we cannot have static files and
-# templates in the same directory (but we need them in the same directory).
-- url: /videochat_window
-  static_dir: rs/templates/video_phone_symlink2/bin-release 
-
 - url: /_ah/stats/.*
   script: djangoappengine.appstats.application
 
