--- a/app_generic.yaml
+++ b/app_generic.yaml
@@ -82,3 +82,15 @@ handlers:
   
 - url: /.*
   script: djangoappengine.main.application
+
+skip_files:
+- ^(.*/)?#.*#$
+- ^(.*/)?.*~$
+- ^(.*/)?.*\.swp$
+- ^(.*/)?.*\.py[co]$
+- ^(.*/)?.*/RCS/.*$
+- ^(.*/)?\..*$
+- ^client/node_modules/.*
+- ^client/.*\.json$
+- ^client/test/.*
+- ^client/Gruntfile\.js
