--- a/app_generic.yaml
+++ b/app_generic.yaml
@@ -26,9 +26,103 @@ handlers:
   script: djangoappengine.deferred.handler.application
   login: admin
 
+
+##############################
+# Start of Favicons
+# Because we have placed favicons in the images directory, and because they need to appear as if they are in the root, 
+# we include each favicon individually here
 - url: /favicon.ico
-  static_files: STATIC_DIR/images/BUILD_NAME/favicon.ico
-  upload: STATIC_DIR/images/BUILD_NAME/favicon.ico
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/favicon.ico
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/favicon.ico
+
+- url: /favicon-16x16.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/favicon-16x16.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/favicon-16x16.png
+
+- url: /favicon-32x32.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/favicon-32x32.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/favicon-32x32.png
+
+- url: /favicon-96x96.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/favicon-96x96.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/favicon-96x96.png
+    
+- url: /favicon-160x160.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/favicon-160x160.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/favicon-160x160.png
+
+- url: /favicon-196x196.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/favicon-196x196.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/favicon-196x196.png
+
+
+
+- url: /apple-touch-icon.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon.png  
+  
+- url: /apple-touch-icon-precomposed.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-precomposed.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-precomposed.png
+
+- url: /apple-touch-icon-57x57.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-57x57.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-57x57.png
+
+- url: /apple-touch-icon-60x60.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-60x60.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-60x60.png
+
+- url: /apple-touch-icon-72x72.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-72x72.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-72x72.png
+
+- url: /apple-touch-icon-76x76.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-76x76.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-76x76.png
+
+- url: /apple-touch-icon-114x114.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-114x114.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-114x114.png
+
+- url: /apple-touch-icon-120x120.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-120x120.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-120x120.png
+
+- url: /apple-touch-icon-144x144.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-144x144.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-144x144.png
+
+- url: /apple-touch-icon-152x152.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-152x152.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/apple-touch-icon-152x152.png
+
+- url: /browserconfig.xml
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/browserconfig.xml
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/browserconfig.xml
+  
+- url: /mstile-70x70.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/mstile-70x70.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/mstile-70x70.png
+  
+- url: /mstile-144x144.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/mstile-144x144.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/mstile-144x144.png
+
+- url: /mstile-150x150.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/mstile-150x150.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/mstile-150x150.png
+  
+- url: /mstile-310x150.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/mstile-310x150.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/mstile-310x150.png  
+  
+- url: /mstile-310x310.png
+  static_files: STATIC_DIR/images/BUILD_NAME/favicons/mstile-310x310.png
+  upload: STATIC_DIR/images/BUILD_NAME/favicons/mstile-310x310.png
+  
+# End of favicons
+##############################
 
 
 # The static directory will contain CSS, JS, Images, etc. 
