--- a/app_generic.yaml
+++ b/app_generic.yaml
@@ -131,6 +131,9 @@ handlers:
 - url: /scripts
   static_dir: STATIC_DIR/scripts
 
+- url: /xml
+  static_dir: STATIC_DIR/xml
+
 # force browsers to load new images from the following directory, every time that we update to a new version.
 - url: MANUALLY_VERSIONED_IMAGES_DIR
   static_dir: STATIC_DIR/images/manually_versioned_images
