Updated to reflect config that allows both test and production paysafe URLs

--- a/paysafe_card/nginx.conf
+++ b/paysafe_card/nginx.conf
@@ -22,10 +22,15 @@ http {
     server {
         listen 443 ssl;
         #listen 80;
-        location /psc/services/PscService {
+        location /test/psc/services/PscService {
             resolver 8.8.8.8;
              #proxy_pass https://$http_host$uri$is_args$args;
              proxy_pass https://soatest.paysafecard.com/psc/services/PscService$is_args$args;
+        }
+        location /test/psc/services/PscService {
+            resolver 8.8.8.8;
+             #proxy_pass https://$http_host$uri$is_args$args;
+             proxy_pass https://soa.paysafecard.com/psc/services/PscService$is_args$args;
         }
     }
 }
